--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
@@ -14,8 +14,13 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "10.0.0"
+}
+
 
 allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint" // Version should be inherited from parent
     repositories {
         google()
         mavenCentral()
