sort high low priority

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     // Kotlin components
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0-native-mt"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-native-mt"
+
+    // RecyclerView Animator
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
 }
